# Algorithms

./: .clang-format  .gitignore  Makefile  README.md  TODO  package.json  template_header.tex  todo.txt
Removed/: 2SAT.cpp
Templates/: template.cpp  theory.tex
Templates/#Setup/: Notes.tex  defines.cpp  template.cpp  ~CMakeLists.py  ~defines.cpp  ~template.cpp
Templates/0-Misc/: CMakeLists.py  CMakeLists.txt  TDCs.cpp  defines.cpp  fastIO.cpp  template.cpp
Templates/DP/: 1D-1D.cpp  Convex-Hull-Trick.cpp  Divide-and-Conquer.cpp  Dynamic-CHT.cpp  Knuth-Optimisation.cpp  Li-Chao.cpp  SOS.cpp
Templates/DS/: ImplicitTreap.cpp  MOs-with-updates.cpp  Mos_with_updates  Persistent.cpp  PersistentST.cpp  SegmentTreeBeats  SegmentTreeBeats.cpp  Treap.cpp  TreapSubsetSumDP.cpp  Wavelet-Trees.cpp  bit.cpp  lazysegtree.cpp
Templates/Flows/: #Dinics.cpp  Bipartite.cpp  Dinics.cpp  Stoer-Wagner.cpp
Templates/Geometry/: 2DGeometry.cpp  3DGeometry.cpp  Convex-Hull.cpp  Geometry2D.cpp  Geometry3D.cpp  convex-hull.cpp
Templates/Graph/: 2SAT.cpp  Centroid.cpp  Dominator-tree.cpp  HLD.cpp
Templates/Graphs/: 2SAT.cpp  AuxillaryTree.cpp  BridgeTree.cpp  Centroid.cpp  (+4 more)
Theory/: theory.tex
dp/: convex_hull_trick.cpp  divide_conquer.cpp  sos.cpp
ds/: TreapLazy.cpp  auxillary_tree.cpp
flow_networks/: dinics.cpp
geometry/: closest_pair.cpp  geometry.cpp
graph/: hld.cpp  tarjan.cpp
math/: miller_rabin.cpp
miscellaneous/: mo_updates.cpp  sqrt_mos.cpp
old_content/: Makefile  README.md
src/: gauss-elim.h  modint.h  segtree.h
strings/: aho-corasick.cpp  z-algo.cpp
(+97 files in other folders)
